# valen-lang

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_ja.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/valen-ast/: Cargo.toml
crates/valen-ast/src/: lib.rs  span.rs  token.rs
crates/valen-codegen/: Cargo.toml
crates/valen-codegen/src/: class_emit.rs  enum_emit.rs  lib.rs
crates/valen-diagnostics/: Cargo.toml
crates/valen-diagnostics/src/: lib.rs
crates/valen-hir/: Cargo.toml
crates/valen-hir/src/: coherence.rs  exhaustive.rs  lib.rs  resolve.rs  ty.rs
crates/valen-lsp/: Cargo.toml
crates/valen-lsp/src/: main.rs
crates/valen-parser/: Cargo.toml
crates/valen-parser/src/: lexer.rs  lib.rs  parser.rs
crates/valen-parser/tests/: lexer.rs  parser.rs
crates/valen-parser/tests/snapshots/: lexer__all_literals.snap  lexer__empty_fn.snap  lexer__let_with_binop.snap  lexer__line_comment_is_skipped.snap  lexer__operators.snap  lexer__unknown_char_produces_error_token.snap  parser__comparison_and_logical_chain.snap  parser__empty_fn.snap  parser__error_missing_semicolon.snap  parser__error_unexpected_top_level.snap  parser__let_mut.snap  parser__let_then_tail.snap  parser__parentheses_override_precedence.snap  parser__precedence_mul_binds_tighter_than_add.snap  parser__unary_prefix.snap
crates/valenc/: Cargo.toml
crates/valenc/src/: main.rs
crates/valenfmt/: Cargo.toml
crates/valenfmt/src/: main.rs
docs/: IMPLEMENTATION_PLAN.md  LANGUAGE_SPEC.md
docs/spec/: 01-lexical.md  02-types.md  03-expressions.md  04-functions.md  05-classes.md  06-enum.md  07-traits.md  08-failure.md  09-pattern.md  10-modules.md  11-concurrency.md  12-strings.md  13-collections.md  14-meta.md  15-dsl.md  16-jvm-target.md  17-samples.md  18-open-questions.md  19-license.md  20-annotations.md
