[package]
name = "valen-ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Valen language AST types"

[dependencies]
smol_str = { workspace = true }
indexmap = { workspace = true }
