[package]
name = "valen-diagnostics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Valen compiler diagnostics (errors, warnings, hints)"

[dependencies]
valen-ast = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
