[package]
name = "valenc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Valen language compiler CLI"

[[bin]]
name = "valenc"
path = "src/main.rs"

[dependencies]
valen-ast = { workspace = true }
valen-diagnostics = { workspace = true }
valen-parser = { workspace = true }
valen-hir = { workspace = true }
valen-codegen = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
